--- a/index.html
+++ b/index.html
@@ -4,51 +4,88 @@
 <head>
   <meta charset="utf-8">
   <title>Music History</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
-	<div id="navBar">
-		<ul>
-			<li>View Music</li>
-			<li>Add Music</li>
-			<li>Profile</li>
-		</ul>
-	</div>
-	<div id="sideBarLeft">
-		<label for="songLengthSlider" class="textLabel">Song Length:</label>
-		<input id="songLengthSlider" type="range" name="" min="0.5" max="5.5" step="0.5">
+	<div id="container">
+		<div id="navBar">
+			<ul id="navLinks">
+				<a href="#" title="#"><li>View Music</li></a>
+				<li>|</li>
+				<a href="#" title="#"><li>Add Music</li></a>
+				<li>|</li>
+				<a href="#" title="#"><li>Profile</li></a>
+			</ul>
+		</div>
+		<div id="sideBarLeft">
+			<label for="songLengthSlider" class="textLabel">Song Length:</label>
+			<input id="songLengthSlider" type="range" name="" min="0.5" max="5.5" step="0.5">
 
-		<label for="artistNameSelect">Artist Name:</label>
-		<select id="artistNameSelect" name="">
-			<option value="" disabled selected>Select one</option>
-			<option value=""></option>
-			<option value=""></option>
-			<option value=""></option>
-			option
-		</select>
-		<label for="artistAlbumSelect">Album:</label>
-		<select id="artistAlbumSelect" name="">
-			<option value="">Select one</option>
-			<option value=""></option>}
-			<option value=""></option>}
-			<option value=""></option>}
-		</select>
-		<label for="">Genre:</label>
-		<input id="genreRock" type="checkbox" name=""><label for="genreRock">Rock</label>
-		<input id="genrePop" type="checkbox" name=""><label for="genrePop">Pop</label>
-		<input id="genreBlues" type="checkbox" name=""><label for="genreBlues">Blues</label>
-		<input id="genreClassical" type="checkbox" name=""><label for="genreClassical">Classical</label>
-		<input id="genreJazz" type="checkbox" name=""><label for="genreJazz">Jazz</label>
-		<input id="genreHipHop" type="checkbox" name=""><label for="genreHipHop">Hip Hop</label>
-		<button id="filterButton" type="button">Filter</button>
-	</div>
-	<div id="content">
-		<article id="song1">
-			<h3>Song Name</h3>
-			<p><span id="artistName1">Artist Name</span><span id="artistAlbum1">Album Name</span><span id="artistGenre1">Genre</span></p>
-			<p><span id="artistName2">Artist Name</span><span id="artistAlbum2">Album Name</span><span id="artistGenre2">Genre</span></p>
-			<p><span id="artistName3">Artist Name</span><span id="artistAlbum3">Album Name</span><span id="artistGenre3">Genre</span></p>
-		</article>
+			<label for="artistNameSelect" class="textLabel">Artist Name:</label>
+			<select id="artistNameSelect" name="">
+				<option value="" disabled selected>Select one</option>
+				<option value=""></option>
+				<option value=""></option>
+				<option value=""></option>
+			</select>
+			<label for="artistAlbumSelect" class="textLabel">Album:</label>
+			<select id="artistAlbumSelect" name="">
+				<option value="">Select one</option>
+				<option value=""></option>
+				<option value=""></option>
+				<option value=""></option>
+			</select>
+			<label for="" class="textLabel">Genre:</label>
+			<div id="genreOptLeft">
+				<label for="genreRock">
+					<input id="genreRock" type="checkbox" name="">
+					Rock
+				</label>
+				<label for="genrePop">
+					<input id="genrePop" type="checkbox" name="">
+					Pop
+				</label>
+				<label for="genreBlues">
+					<input id="genreBlues" type="checkbox" name="">
+					Blues
+				</label>
+			</div>
+			<div id="genreOptRight">
+				<label for="genreClassical">
+					<input id="genreClassical" type="checkbox" name="">
+					Classical
+				</label>
+				<label for="genreJazz">
+					<input id="genreJazz" type="checkbox" name="">
+					Jazz
+				</label>
+				<label for="genreHipHop">
+					<input id="genreHipHop" type="checkbox" name="">
+					Hip Hop
+				</label>
+			</div>
+			<button id="filterButton" type="button">Filter</button>
+		</div>
+		<div id="content">
+			<article id="song1">
+				<h1>Song Name</h1>
+				<p><span id="artistName1">Artist Name</span><span>|</span><span id="artistAlbum1">Album Name</span><span>|</span><span id="artistGenre1">Genre</span></p>
+			</article>
+			<article id="song2">
+				<h1>Song Name</h1>
+				<p><span id="artistName2">Artist Name</span><span>|</span><span id="artistAlbum2">Album Name</span><span>|</span><span id="artistGenre2">Genre</span></p>
+			</article>
+			<article id="song3">
+				<h1>Song Name</h1>
+				<p><span id="artistName3">Artist Name</span><span>|</span><span id="artistAlbum3">Album Name</span><span>|</span><span id="artistGenre3">Genre</span></p>
+			</article>
+			<article id="song4">
+				<h1>Song Name</h1>
+				<p><span id="artistName4">Artist Name</span><span>|</span><span id="artistAlbum4">Album Name</span><span>|</span><span id="artistGenre4">Genre</span></p>
+			</article>
+		</div>
 	</div>
 </body>
 </html>
